aidoop-p/k8s-extends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        db: mongo
    spec:
      volumes:
      - name: mongo-pv-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_USERNAME
          valueFrom:
            secretKeyRef:
              name: prod-secrets
              key: MONGO_ROOT_USER
        - name: MONGO_INITDB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: prod-secrets
              key: MONGO_ROOT_PASSWORD
        - name: MONGO_INITDB_DATABASE
          valueFrom:
            secretKeyRef:
              name: prod-secrets
              key: MONGO_DATABASE
        image: mongo:4.4.3
        name: mongo
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongo-pv-storage
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    db: mongo
  name: mongodb
spec:
  ports:
  - port: 27017
  selector:
    db: mongo
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
      - name: redis-pv-storage
        persistentVolumeClaim:
          claimName: redis-pv-claim
      containers:
        - name: redis
          image: redis:6.2.2
          ports:
          - containerPort: 6379
          volumeMounts:
          - name: redis-pv-storage
            mountPath: /mnt/redis
---
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
